# tittle-classfication

./: .gitignore  AGENTS.md  FAQ.md  audio_subtitle.py  download_clip.py  download_model.py  gui.py  providers.py  pyproject.toml  readme.md  readme.txt  renamecsv.py  stage1_extract_propose.py  stage1b_ai_refine.py  stage1c_clip_classifier.py  stage1c_frame_selector.py  stage1c_vision_refine.py  stage1c_yolo_detector.py  stage2_apply_rename.py  tag_statistics.py  test.py
config/: default.toml  providers.json
docs/prd/: vad-audio-segmentation.md
scripts/: README.md  download_clip.py  download_yolo_models.py  extract_original.py  fix_all_csvs.py  fix_bracket_filenames.py  fix_bracket_only.py  fix_csv_paths.py  full_workflow.py  import_csv.py
src/title_classifier/: __init__.py  __main__.py
src/title_classifier/core/: __init__.py  db_schema.sql  db_store.py  refiner.py  renamer.py  scanner.py  vision.py
src/title_classifier/detectors/: __init__.py  base.py  clip.py  uhd.py  yolo.py
src/title_classifier/gui/: __init__.py  app.py
src/title_classifier/providers/: __init__.py  base.py
src/title_classifier/utils/: __init__.py  atomic_csv.py  audio.py  file_resolve.py  image.py  muxer.py  stats.py  video.py
subtitles/: 1111.srt  516sexy_yuki.srt  5月14日(6).srt  68551.srt  yhfyhg.srt  一只顶美2.srt
test/: test_yolo.py  test_yolo_full.py
test/results/: analysis_result.json
tests/: conftest.py  test_scanner.py
tests/test_detectors/: test_yolo.py
tittle_classfication.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
