[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tittle-classfication"
version = "0.1.0"
description = "视频标题分类和重命名工具"
readme = "readme.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Starzzb"}
]
keywords = ["video", "classification", "rename", "nlp", "bert"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.dependencies]
transformers = "^4.30.0"
pandas = "^2.0.0"
jieba = "^0.42.1"
torch = "^2.0.0"

[project.urls]
Homepage = "https://github.com/Starzzb/tittle-classfication"
Repository = "https://github.com/Starzzb/tittle-classfication.git"